docs: finalize integration of java-kotlin-concurrency skill in root documentation and validation