@@ -67,7 +67,15 @@ pack-skill-agents/
     │   │   └── quick_scan_rules.txt         # Regras de varredura estática
     │   └── references/                      # Guias técnicos aprofundados (Spring, Injection, etc.)
     │
-    ├── concurrency-java21-review/           # Skill de Concorrência Moderna & Virtual Threads
+    ├── java-kotlin-concurrency/             # Skill de Concorrência e Paralelismo JVM (Java 25 & Kotlin 2.4)
+    │   ├── SKILL.md                         # Contrato principal da skill
+    │   ├── AGENTS.md                        # Persona e regras específicas de concorrência
+    │   ├── scripts/
+    │   │   ├── scan-concurrency.sh          # Scanner estático de concorrência (Bash)
+    │   │   └── scan-concurrency.ps1         # Scanner estático de concorrência (PowerShell)
+    │   └── references/                      # 9 guias temáticos aprofundados (VT, Coroutines, etc.)
+    │
+    ├── concurrency-java21-review/           # Skill de Concorrência Legada & Migração Java 21
     │   ├── SKILL.md                         # Contrato principal da skill
     │   ├── AGENTS.md                        # Regras e baseline da skill
     │   └── references/                      # Guias técnicos (Virtual Threads, Carrier Pinning, etc.)
@@ -103,7 +111,8 @@ graph TD
 
     subgraph Core_Skills ["Habilidades Embutidas (Bundled Skills)"]
         SK_SEC["skills/java-kotlin-security-audit"]
-        SK_CONC["skills/concurrency-java21-review"]
+        SK_CONC_NEW["java-kotlin-concurrency<br/>(Java 25 & Kotlin 2.4)"]
+        SK_CONC["skills/concurrency-java21-review (Legado)"]
         SK_CLEAN["skills/clean-code"]
         SK_PAT["skills/design-patterns"]
         SK_SOL["skills/solid-principles"]
@@ -116,6 +125,7 @@ graph TD
 
     P_UNI --> AGENTS
     P_UNI --> SK_SEC
+    P_UNI --> SK_CONC_NEW
     P_UNI --> SK_CONC
     P_UNI --> SK_CLEAN
     P_UNI --> SK_PAT
@@ -124,6 +134,7 @@ graph TD
     P_GEM --> GEM
     GEM --> AGENTS
     P_GEM --> SK_SEC
+    P_GEM --> SK_CONC_NEW
     P_GEM --> SK_CONC
     P_GEM --> SK_CLEAN
     P_GEM --> SK_PAT
@@ -132,6 +143,7 @@ graph TD
     P_CLA --> CLA
     CLA --> AGENTS
     P_CLA --> SK_SEC
+    P_CLA --> SK_CONC_NEW
     P_CLA --> SK_CONC
     P_CLA --> SK_CLEAN
     P_CLA --> SK_PAT
@@ -139,6 +151,7 @@ graph TD
 
     P_COD --> AGENTS
     P_COD --> SK_SEC
+    P_COD --> SK_CONC_NEW
     P_COD --> SK_CONC
     P_COD --> SK_CLEAN
     P_COD --> SK_PAT
@@ -146,6 +159,7 @@ graph TD
 
     P_GRO --> AGENTS
     P_GRO --> SK_SEC
+    P_GRO --> SK_CONC_NEW
     P_GRO --> SK_CONC
     P_GRO --> SK_CLEAN
     P_GRO --> SK_PAT
@@ -229,7 +243,7 @@ Aponte o Codex Agent CLI ou ambiente Codex para a raiz do repositório:
 codex --profile .codex-plugin/plugin.json
 ```
 
-As habilidades `java-kotlin-security-audit`, `concurrency-java21-review`, `clean-code`, `design-patterns` e
+As habilidades `java-kotlin-security-audit`, `java-kotlin-concurrency`, `concurrency-java21-review`, `clean-code`, `design-patterns` e
 `solid-principles` serão registradas no catálogo de ferramentas do Codex.
 
 ---
@@ -251,17 +265,18 @@ grok --system-prompt AGENTS.md --skills-dir skills/
 
 ## 5. Habilidades Embutidas (Bundled Skills)
 
-O pacote fornece cinco habilidades centrais de alta especialização técnica para engenharia de software na JVM:
+O pacote fornece seis habilidades centrais de alta especialização técnica para engenharia de software na JVM:
 
 ### Matriz Geral de Habilidades
 
-| Habilidade                 | Contrato Canônico                                                                   | Foco Principal                                                                       | Gatilhos de Ativação                                                         | Baseline Tecnológico                       |
-|:---------------------------|:------------------------------------------------------------------------------------|:-------------------------------------------------------------------------------------|:-----------------------------------------------------------------------------|:-------------------------------------------|
-| **Auditoria de Segurança** | [`skills/java-kotlin-security-audit`](./skills/java-kotlin-security-audit/SKILL.md) | OWASP Top 10:2025, ASVS 5.0, BOLA/BFLA, SSRF, PQC (FIPS 203/204)                     | Auditorias pré-produção, pentests, análise de injeção, conformidade OWASP    | Java 25 / Kotlin 2.4 / Spring Security 7.1 |
-| **Concorrência Moderna**   | [`skills/concurrency-java21-review`](./skills/concurrency-java21-review/SKILL.md)   | Virtual Threads (Loom), carrier pinning, `ReentrantLock`, `CompletableFuture`        | Migração Loom, deadlocks, concorrência assíncrona, thread safety             | Java 25 LTS / Kotlin 2.4                   |
-| **Clean Code**             | [`skills/clean-code`](./skills/clean-code/SKILL.md)                                 | DRY, KISS, YAGNI, complexidade ciclomática, convenções de nomenclatura e code smells | Limpeza e refatoração de código, simplificação de métodos, legibilidade      | Java 25 LTS / Kotlin 2.4+                  |
-| **Padrões de Projeto**     | [`skills/design-patterns`](./skills/design-patterns/SKILL.md)                       | Padrões GoF (Criacionais, Estruturais, Comportamentais) e cálculo monetário seguro   | Implementação de patterns, arquitetura de classes, precisão com `BigDecimal` | Java 25 / Kotlin 2.4 / Spring Boot 4.1.1   |
-| **Princípios SOLID**       | [`skills/solid-principles`](./skills/solid-principles/SKILL.md)                     | SRP, OCP, LSP, ISP, DIP com tipagem estática moderna (`sealed`, `record`)            | Design e modularização de classes, desacoplamento, refatoração estrutural    | Java 25 / Kotlin 2.4 / Spring Boot 4.1.1   |
+| Habilidade                         | Contrato Canônico                                                                   | Foco Principal                                                                                      | Gatilhos de Ativação                                                               | Baseline Tecnológico                       |
+|:-----------------------------------|:------------------------------------------------------------------------------------|:----------------------------------------------------------------------------------------------------|:-----------------------------------------------------------------------------------|:-------------------------------------------|
+| **Auditoria de Segurança**         | [`skills/java-kotlin-security-audit`](./skills/java-kotlin-security-audit/SKILL.md) | OWASP Top 10:2025, ASVS 5.0, BOLA/BFLA, SSRF, PQC (FIPS 203/204)                                    | Auditorias pré-produção, pentests, análise de injeção, conformidade OWASP          | Java 25 / Kotlin 2.4 / Spring Security 7.1 |
+| **Concorrência e Paralelismo JVM** | [`skills/java-kotlin-concurrency`](./skills/java-kotlin-concurrency/SKILL.md)       | Virtual Threads (Java 25), Kotlin Coroutines 2.4, ScopedValue, carrier pinning, Mutex, Flow, integridade financeira | Revisão/implementação de concorrência, Loom, coroutines, thread safety, deadlocks | Java 25 LTS / Kotlin 2.4 / Spring Boot 4.1.1 |
+| **Migração Concorrência Java 21**  | [`skills/concurrency-java21-review`](./skills/concurrency-java21-review/SKILL.md)   | Auditoria e migração de bases legadas Java 21 para Virtual Threads e análise retroativa             | Migração Loom de Java 21, auditoria retroativa, thread safety em bases legadas     | Java 21 LTS                                |
+| **Clean Code**                     | [`skills/clean-code`](./skills/clean-code/SKILL.md)                                 | DRY, KISS, YAGNI, complexidade ciclomática, convenções de nomenclatura e code smells                | Limpeza e refatoração de código, simplificação de métodos, legibilidade            | Java 25 LTS / Kotlin 2.4+                  |
+| **Padrões de Projeto**             | [`skills/design-patterns`](./skills/design-patterns/SKILL.md)                       | Padrões GoF (Criacionais, Estruturais, Comportamentais) e cálculo monetário seguro                  | Implementação de patterns, arquitetura de classes, precisão com `BigDecimal`       | Java 25 / Kotlin 2.4 / Spring Boot 4.1.1   |
+| **Princípios SOLID**               | [`skills/solid-principles`](./skills/solid-principles/SKILL.md)                     | SRP, OCP, LSP, ISP, DIP com tipagem estática moderna (`sealed`, `record`)                           | Design e modularização de classes, desacoplamento, refatoração estrutural          | Java 25 / Kotlin 2.4 / Spring Boot 4.1.1   |
 
 ---
 
@@ -304,7 +319,47 @@ bash ./skills/java-kotlin-security-audit/scripts/quick_scan.sh /caminho/do/meu-b
 
 ---
 
-### 5.2. Revisão de Concorrência Moderna (`skills/concurrency-java21-review`)
+### 5.2. Concorrência e Paralelismo JVM (`skills/java-kotlin-concurrency`)
+
+Documentação detalhada: [`skills/java-kotlin-concurrency/SKILL.md`](./skills/java-kotlin-concurrency/SKILL.md)
+
+- **Escopo e Cobertura:**
+    - **Java 25 Virtual Threads & Project Loom:** Modelo unificado de concorrência para I/O-bound e CPU-bound workloads. Detecção e eliminação de carrier thread pinning (substituição de blocos `synchronized` em caminhos I/O bloqueantes por `ReentrantLock` com `try/finally`). Prevenção de thread exhaustion, dimensionamento ótimo de pools downstream (JDBC HikariCP, HTTP clients, message brokers) e eliminação da flag removida `jdk.tracePinnedThreads`.
+    - **Scoped Values (`ScopedValue`):** Alternativa moderna, segura e imutável ao `ThreadLocal` para propagação de contexto em Virtual Threads, evitando vazamentos de memória e overhead de herança de thread context. Rejeição explícita de APIs preview (`StructuredTaskScope`, `--enable-preview`).
+    - **Kotlin Coroutines 2.4+ (JVM de Servidor):** Concorrência estruturada no alvo JVM, despacho não-bloqueante (`Dispatchers.IO`, `Dispatchers.Default`), uso seguro de `Mutex` (nunca sob Virtual Threads com I/O bloqueante) e streams reativos assíncronos com `Flow`, `StateFlow` e `SharedFlow`. Banimento estrito de `GlobalScope`, `runBlocking` no hot-path de requisições e APIs experimentais sem justificativa formal.
+    - **Consistência Financeira & Race Conditions:** Proteção rigorosa de mutações de saldo e estado financeiro concorrente. Uso mandatório de `BigDecimal` com escala e arredondamento explícitos (`RoundingMode.HALF_EVEN` / `HALF_UP`), banimento de `float`/`double`, proibição de operadores de divisão (`/`) em Kotlin sem `MathContext` explícito, e controle de concorrência com optimistic locking (`@Version`) e travas atômicas/pessimistas.
+    - **Concorrência Assíncrona & Resiliência:** Auditoria de `CompletableFuture` (tratamento defensivo com `.exceptionally()` / `.handle()`, propagação de tracing e timeouts obrigatórios com `orTimeout()`), Spring `@Async` com executors dedicados e limites estritos, e backpressure com `Semaphore` e rate limiters.
+- **Guias Técnicos Aprofundados (`references/`):**
+    A skill disponibiliza 9 guias temáticos carregados sob demanda com prescrições normativas:
+    1. [`references/virtual-threads.md`](./skills/java-kotlin-concurrency/references/virtual-threads.md): Virtual Threads no Java 25, eliminação de pinning, dimensionamento de pools e I/O não-bloqueante.
+    2. [`references/virtual-threads-vs-completable-future.md`](./skills/java-kotlin-concurrency/references/virtual-threads-vs-completable-future.md): Comparativo arquitetural entre Virtual Threads, `CompletableFuture`, reativo (WebFlux) e ForkJoinPool.
+    3. [`references/completable-future.md`](./skills/java-kotlin-concurrency/references/completable-future.md): Boas práticas com `CompletableFuture`, encadeamento assíncrono, timeouts e tratamento de falhas.
+    4. [`references/spring-async.md`](./skills/java-kotlin-concurrency/references/spring-async.md): Spring `@Async`, propagação de `SecurityContext`, configuração de executors e integração com Virtual Threads.
+    5. [`references/parallelism.md`](./skills/java-kotlin-concurrency/references/parallelism.md): Paralelismo CPU-bound, dimensionamento de `ForkJoinPool`, `parallelStream` consciente e isolamento de carga.
+    6. [`references/kotlin-coroutines.md`](./skills/java-kotlin-concurrency/references/kotlin-coroutines.md): Kotlin 2.4 Coroutines na JVM, Structured Concurrency, `Dispatchers`, `Mutex`, `Flow` e interop com Java/VTs.
+    7. [`references/financial-consistency.md`](./skills/java-kotlin-concurrency/references/financial-consistency.md): Integridade de saldo financeiro, `BigDecimal`, precisão monetária, locks atômicos e idempotência.
+    8. [`references/classic-issues.md`](./skills/java-kotlin-concurrency/references/classic-issues.md): Diagnóstico e mitigação de race conditions, deadlocks, visibilidade de memória, `volatile` e `ConcurrentHashMap`.
+    9. [`references/cloud-native-concurrency.md`](./skills/java-kotlin-concurrency/references/cloud-native-concurrency.md): Implantação cloud-native em Kubernetes, GraalVM native image, limites de CPU/cgroups, file descriptors e JFR profiling.
+- **Scripts de Varredura de Concorrência (`scan-concurrency`):**
+    Varredura estática profunda com detecção de APIs preview, thread pinning, locks sem try/finally, ScopedValue, CompletableFuture sem timeout, uso de GlobalScope/runBlocking em Kotlin e divisões de BigDecimal inseguras:
+    - PowerShell (Windows / pwsh 7+): [`skills/java-kotlin-concurrency/scripts/scan-concurrency.ps1`](./skills/java-kotlin-concurrency/scripts/scan-concurrency.ps1)
+    - Bash (Linux / macOS / Git Bash): [`skills/java-kotlin-concurrency/scripts/scan-concurrency.sh`](./skills/java-kotlin-concurrency/scripts/scan-concurrency.sh)
+
+#### Como Executar a Varredura de Concorrência:
+
+```powershell
+# No PowerShell (Windows):
+pwsh ./skills/java-kotlin-concurrency/scripts/scan-concurrency.ps1 -TargetDir "C:\caminho\do\meu-backend"
+```
+
+```bash
+# No Bash (Linux/macOS/Git Bash):
+bash ./skills/java-kotlin-concurrency/scripts/scan-concurrency.sh /caminho/do/meu-backend
+```
+
+---
+
+### 5.3. Revisão de Concorrência Legada Java 21 (`skills/concurrency-java21-review`)
 
 Documentação detalhada: [`skills/concurrency-java21-review/SKILL.md`](./skills/concurrency-java21-review/SKILL.md)
 
@@ -323,7 +378,7 @@ Documentação detalhada: [`skills/concurrency-java21-review/SKILL.md`](./skills
 
 ---
 
-### 5.3. Clean Code & Manutenibilidade Idiomática (`skills/clean-code`)
+### 5.4. Clean Code & Manutenibilidade Idiomática (`skills/clean-code`)
 
 Documentação detalhada: [`skills/clean-code/SKILL.md`](./skills/clean-code/SKILL.md)
 
@@ -341,7 +396,7 @@ Documentação detalhada: [`skills/clean-code/SKILL.md`](./skills/clean-code/SKI
 
 ---
 
-### 5.4. Padrões de Projeto & Arquiteturais na JVM (`skills/design-patterns`)
+### 5.5. Padrões de Projeto & Arquiteturais na JVM (`skills/design-patterns`)
 
 Documentação detalhada: [`skills/design-patterns/SKILL.md`](./skills/design-patterns/SKILL.md)
 
@@ -357,7 +412,7 @@ Documentação detalhada: [`skills/design-patterns/SKILL.md`](./skills/design-pa
 
 ---
 
-### 5.5. Princípios SOLID na JVM Moderna (`skills/solid-principles`)
+### 5.6. Princípios SOLID na JVM Moderna (`skills/solid-principles`)
 
 Documentação detalhada: [`skills/solid-principles/SKILL.md`](./skills/solid-principles/SKILL.md)
 
@@ -407,6 +462,7 @@ powershell -NoProfile -ExecutionPolicy Bypass -File scripts\validate-plugin.ps1
   [PASS] Documento presente: GEMINI.md
   [PASS] Documento presente: README.md
   [PASS] Skill valida: java-kotlin-security-audit
+  [PASS] Skill valida: java-kotlin-concurrency
   [PASS] Skill valida: concurrency-java21-review
   [PASS] Skill valida: clean-code
   [PASS] Skill valida: design-patterns
@@ -434,6 +490,7 @@ bash scripts/validate-plugin.sh
   [PASS] Documento presente: GEMINI.md
   [PASS] Documento presente: README.md
   [PASS] Skill valida: java-kotlin-security-audit
+  [PASS] Skill valida: java-kotlin-concurrency
   [PASS] Skill valida: concurrency-java21-review
   [PASS] Skill valida: clean-code
   [PASS] Skill valida: design-patterns
